--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "mocha --exit --trace-warnings",
-    "build": "rollup -c; standard --fix ./*.cjs",
+    "build": "rollup -c",
     "prepare": "npm run build"
   },
   "repository": {
