trying to get tests passing in node 12.x, streams wrangling

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "standard": "^16.0.3"
   },
   "dependencies": {
-    "length-prefixed-stream": "^2.0.0"
+    "length-prefixed-stream": "^2.0.0",
+    "readable-stream": "^3.6.0"
   }
 }
