--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dataset-archive",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "Simple key-value storage of large sets of data in a very compact flat file, prioritising compact archival over read/write speeds. Very minimal.",
   "main": "index.js",
   "type": "module",
@@ -34,7 +34,8 @@
     "standard": "^16.0.3"
   },
   "dependencies": {
-    "length-prefixed-stream": "^2.0.0",
-    "readable-stream": "^3.6.0"
+    "it-length-prefixed": "^5.0.2",
+    "stream-to-it": "^0.2.3",
+    "streaming-iterables": "^6.0.0"
   }
 }
